{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 34,
  "lineage": "867d5e2c-8184-5261-b8f1-2192ffd90637",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:loadbalancer/app/uday-poc-alb/c81eb4d88eeb80f4",
            "arn_suffix": "app/uday-poc-alb/c81eb4d88eeb80f4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "uday-poc-alb-667563467.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:loadbalancer/app/uday-poc-alb/c81eb4d88eeb80f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "uday-poc-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06854961590e4eaf8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d87fcf47ecf66dfd"
              },
              {
                "subnet_id": "subnet-0efc801bd993d9d53"
              }
            ],
            "subnets": [
              "subnet-0d87fcf47ecf66dfd",
              "subnet-0efc801bd993d9d53"
            ],
            "tags": {
              "Name": "uday-poc-alb"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-alb",
              "Project": "uday"
            },
            "vpc_id": "vpc-069a422b0716e7443",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.security_groups.aws_security_group.alb",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:listener/app/uday-poc-alb/c81eb4d88eeb80f4/1253dd8aecf803a5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:targetgroup/uday-poc-tg/5140b0df06e3d196",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:listener/app/uday-poc-alb/c81eb4d88eeb80f4/1253dd8aecf803a5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:loadbalancer/app/uday-poc-alb/c81eb4d88eeb80f4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Name": "uday-poc-listener"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-listener",
              "Project": "uday"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.app",
            "module.security_groups.aws_security_group.alb",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:targetgroup/uday-poc-tg/5140b0df06e3d196",
            "arn_suffix": "targetgroup/uday-poc-tg/5140b0df06e3d196",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:065247281763:targetgroup/uday-poc-tg/5140b0df06e3d196",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "uday-poc-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "uday-poc-tg"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-tg",
              "Project": "uday"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:internet-gateway/igw-0183f138d7dccec26",
            "id": "igw-0183f138d7dccec26",
            "owner_id": "065247281763",
            "tags": {
              "Name": "uday-poc-igw"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-igw",
              "Project": "uday"
            },
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065bba4435fdf62b5",
            "arn": "arn:aws:ec2:ap-south-1:065247281763:elastic-ip/eipalloc-065bba4435fdf62b5",
            "domain": "vpc",
            "id": "eipalloc-065bba4435fdf62b5",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-235-219-83.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.235.219.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "uday-poc-nat-eip-1"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-nat-eip-1",
              "Project": "uday"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065bba4435fdf62b5",
            "association_id": "eipassoc-09a2ef66946c96296",
            "connectivity_type": "public",
            "id": "nat-05e32a1cde61abca5",
            "network_interface_id": "eni-042786df874862922",
            "private_ip": "10.0.1.185",
            "public_ip": "13.235.219.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0efc801bd993d9d53",
            "tags": {
              "Name": "uday-poc-nat-1"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-nat-1",
              "Project": "uday"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.nat_gateway.aws_eip.nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e39f37017f8b35cf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05e32a1cde61abca5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e39f37017f8b35cf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0183f138d7dccec26",
            "id": "r-rtb-0814cf9027907da521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0814cf9027907da52",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.route_tables.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:route-table/rtb-0e39f37017f8b35cf",
            "id": "rtb-0e39f37017f8b35cf",
            "owner_id": "065247281763",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uday-poc-private-rt-1"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-private-rt-1",
              "Project": "uday"
            },
            "timeouts": null,
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:route-table/rtb-0814cf9027907da52",
            "id": "rtb-0814cf9027907da52",
            "owner_id": "065247281763",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "uday-poc-public-rt"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-public-rt",
              "Project": "uday"
            },
            "timeouts": null,
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0fadf206d94ba75",
            "route_table_id": "rtb-0e39f37017f8b35cf",
            "subnet_id": "subnet-0d8e6d07cccf118be"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa97cf1ce53b84a4",
            "route_table_id": "rtb-0e39f37017f8b35cf",
            "subnet_id": "subnet-0231e107cf43e450a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.nat_gateway.aws_eip.nat",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_tables.aws_route_table.private",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0852a0be463e907bc",
            "route_table_id": "rtb-0814cf9027907da52",
            "subnet_id": "subnet-0efc801bd993d9d53"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002d610a2f966287d",
            "route_table_id": "rtb-0814cf9027907da52",
            "subnet_id": "subnet-0d87fcf47ecf66dfd"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:security-group/sg-06854961590e4eaf8",
            "description": "ALB: inbound only on the listener port, from approved CIDRs",
            "egress": [],
            "id": "sg-06854961590e4eaf8",
            "ingress": [],
            "name": "uday-poc-alb-sg",
            "name_prefix": "",
            "owner_id": "065247281763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uday-poc-alb-sg"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-alb-sg",
              "Project": "uday"
            },
            "timeouts": null,
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:security-group/sg-0873278d5364eb3dc",
            "description": "App: inbound only on the app port, only from the ALB",
            "egress": [],
            "id": "sg-0873278d5364eb3dc",
            "ingress": [],
            "name": "uday-poc-app-sg",
            "name_prefix": "",
            "owner_id": "065247281763",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "uday-poc-app-sg"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-app-sg",
              "Project": "uday"
            },
            "timeouts": null,
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:security-group-rule/sgr-09c4ca086cd42135e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Only reach app instances on the app port",
            "from_port": 8080,
            "id": "sgr-09c4ca086cd42135e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0873278d5364eb3dc",
            "security_group_id": "sg-06854961590e4eaf8",
            "security_group_rule_id": "sgr-09c4ca086cd42135e",
            "tags": null,
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Project": "uday"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:security-group-rule/sgr-0b4397b625b5f0320",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTP egress (package repositories)",
            "from_port": 80,
            "id": "sgr-0b4397b625b5f0320",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0873278d5364eb3dc",
            "security_group_rule_id": "sgr-0b4397b625b5f0320",
            "tags": null,
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Project": "uday"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "app_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:security-group-rule/sgr-05fcb8edce7f780b6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "HTTPS egress (updates, APIs, SSM)",
            "from_port": 443,
            "id": "sgr-05fcb8edce7f780b6",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0873278d5364eb3dc",
            "security_group_rule_id": "sgr-05fcb8edce7f780b6",
            "tags": null,
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Project": "uday"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_from_allowed_cidrs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0.0.0.0/0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:security-group-rule/sgr-0bd6d79278b0fb7e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Listener port from approved CIDRs only",
            "from_port": 80,
            "id": "sgr-0bd6d79278b0fb7e8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-06854961590e4eaf8",
            "security_group_rule_id": "sgr-0bd6d79278b0fb7e8",
            "tags": null,
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Project": "uday"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:security-group-rule/sgr-0ddb49bdac033bb2a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "App port from the ALB security group only",
            "from_port": 8080,
            "id": "sgr-0ddb49bdac033bb2a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-06854961590e4eaf8",
            "security_group_id": "sg-0873278d5364eb3dc",
            "security_group_rule_id": "sgr-0ddb49bdac033bb2a",
            "tags": null,
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Project": "uday"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.alb",
            "module.security_groups.aws_security_group.app",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:subnet/subnet-0d8e6d07cccf118be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8e6d07cccf118be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065247281763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uday-poc-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-private-1",
              "Project": "uday",
              "Tier": "private"
            },
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:subnet/subnet-0231e107cf43e450a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0231e107cf43e450a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065247281763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uday-poc-private-2",
              "Tier": "private"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-private-2",
              "Project": "uday",
              "Tier": "private"
            },
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:subnet/subnet-0efc801bd993d9d53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efc801bd993d9d53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065247281763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uday-poc-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-public-1",
              "Project": "uday",
              "Tier": "public"
            },
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:subnet/subnet-0d87fcf47ecf66dfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d87fcf47ecf66dfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "065247281763",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "uday-poc-public-2",
              "Tier": "public"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-public-2",
              "Project": "uday",
              "Tier": "public"
            },
            "vpc_id": "vpc-069a422b0716e7443"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:065247281763:vpc/vpc-069a422b0716e7443",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ff5a34fe0c1b2e93",
            "default_route_table_id": "rtb-067fe8374d156090a",
            "default_security_group_id": "sg-0816404d0d8eb1645",
            "dhcp_options_id": "dopt-0d071c30a31403251",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-069a422b0716e7443",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067fe8374d156090a",
            "owner_id": "065247281763",
            "tags": {
              "Name": "uday-poc-vpc"
            },
            "tags_all": {
              "Environment": "poc",
              "ManagedBy": "terraform",
              "Name": "uday-poc-vpc",
              "Project": "uday"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}